# speiseplan

./: .dockerignore  .gitignore  Dockerfile  README.md  api_server.py  debug_pdf.py  docker-compose.yml  download_pdfs.py  known_pdf_urls.json  parse_pdfs.py  pyproject.toml  requirements.txt  speiseplan_service.py
.github/workflows/: docker-publish.yml
homeassistant/: configuration.md  lovelace_cards.yaml  sensors.yaml
pdf_speiseplaene/: README.txt
tests/: test_regressions.py
