[project]
name = "speiseplan"
version = "0.1.0"
description = "Scrape Wollinos Speiseplan and provide data via API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber~=0.11.9",
    "flask~=3.1.2",
    "cloudscraper~=1.2.71",
    "beautifulsoup4~=4.14.3",
    "brotli~=1.2.0",
]
